--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trampas Barceló</title>
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/1.13.1/js/dataTables.bootstrap5.min.js"></script>
   <!-- BOOSTRAP CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap5.min.css">
   <!-- Toastify CSS -->
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 
 <body>
@@ -37,26 +45,16 @@
       <img id="portada" src="{{ url_for('static', filename='Trampas Barceló - whitepaper.jpg') }}" />
     </div>
   </div>
-  <div class="container pt-4 mapa-dashboard" style="display:'none'">
-    <div class="row">
-      <!--div class="row">
-        <input type="button" id="reloadMapa" value="Actualizar información" />
-      </div-->
-      <div class="col-6">
-        <iframe id="mapa" src="/mapa" width="100%" height="100%"></iframe>
+  <div class="container_mapa-dashboard pt-4 mapa-dashboard" style="display:'none'">
+    <div class="container_dashboard_body">
+      <div class="item_dashboard_tabla">
+        <iframe id="detalle-casos" class="detalle-casos" 
+          src="/detalle-casos" width="100%"
+          frameborder="0" scrolling="no" onload="resizeIframe(this)"></iframe>
       </div>
-      <!--script>
-          function reload() {
-              document.getElementById('mapa').src += '';
-          }
-          reloadMapa.onclick = reload;
-      </script-->
-      <div class="col-6">
-        <iframe id="detalle-casos" class="detalle-casos" src="/detalle-casos" width="600" height="600"></iframe>
-      </div>
+      
     </div>
   </div>
-
   <!-- Modal -->
   <div class="modal fade" id="signinModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalSignin"
     aria-hidden="true">
@@ -81,6 +79,11 @@
   
   <!-- SCRIPTS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function resizeIframe(obj) {
+      obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
+    }
+  </script>
   <!-- Toastify js -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script type="module" src="{{ url_for('static', filename='main.js') }}"></script>
