--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     function resizeIframe(obj) {
-      obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
+      //obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
+      obj.style.height = '1000px';
     }
   </script>
   <!-- Toastify js -->
