--- a/templates/index.html
+++ b/templates/index.html
@@ -67,9 +67,9 @@
         <div class="modal-body">
           <form id="login-form">
             <label for="email">Email</label>
-            <input type="text" id="login-email" class="form-control mb-3" placeholder="Email" value="fcernaf@gmail.com" required>
+            <input type="text" id="login-email" class="form-control mb-3" placeholder="Email" value="" required>
             <label for="password">Password:</label>
-            <input type="password" id="login-password" class="form-control mb-3" placeholder="Password" value="123456" required>
+            <input type="password" id="login-password" class="form-control mb-3" placeholder="Password" value="" required>
             <button type="submit" class="btn btn-success w-100 mb-4">Login</button>
           </form>
         </div>
