--- a/templates/detalle-casos.html
+++ b/templates/detalle-casos.html
@@ -42,7 +42,7 @@
                 </thead>
                 <tbody>
                     {% for resumen_diario in resumenes_diario_datos %}
-                    <tr onclick="verDetalle('{{ resumen_diario.fecha|int }}', 
+                    <tr onclick="verDetalle('{{ resumen_diario.fecha }}', 
                                             '{{ resumen_diario.centro }}',
                                             '{{ resumen_diario.foto_original }}',
                                             '{{ resumen_diario.foto_yolov5 }}' )">
