--- a/templates/detalle-casos.html
+++ b/templates/detalle-casos.html
@@ -42,7 +42,7 @@
                 </thead>
                 <tbody>
                     {% for resumen_diario in resumenes_diario_datos %}
-                    <tr onclick="verDetalle('{{ resumen_diario.fecha }}', 
+                    <tr onclick="verDetalle('{{ resumen_diario.foto_fecha }}', 
                                             '{{ resumen_diario.centro }}',
                                             '{{ resumen_diario.foto_original }}',
                                             '{{ resumen_diario.foto_yolov5 }}' )">
@@ -71,6 +71,7 @@
                     <tr>
                         <th scope="col">Fecha</th>
                         <th scope="col">Centro</th>
+                        <th scope="col">Cámara</th>
                         <th scope="col">Aedes</th>
                         <th scope="col">Mosquitos</th>
                         <th scope="col">Moscas</th>
@@ -84,9 +85,10 @@
                                             '{{ resumen_diario.centro }}',
                                             '{{ resumen_diario.centro_nombre }}', 
                                             '{{ resumen_diario.foto_original }}',
-                                            '{{ resumen_diario.foto_yolov5 }}' )">
+                                            '{{ resumen_diario.path_foto_yolo }}' )">
                         <td>{{ resumen_diario.fecha_formato }}</td>
                         <td>{{ resumen_diario.centro_nombre }}</td>
+                        <td>{{ resumen_diario.device_id }}</td>
                         <td>{{ resumen_diario.cantidad_aedes|int }}</td>
                         <td>{{ resumen_diario.cantidad_mosquitos|int }}</td>
                         <td>{{ resumen_diario.cantidad_moscas|int }}</td>
