Mostrar imagenes del bucket

--- a/templates/detalle-casos.html
+++ b/templates/detalle-casos.html
@@ -85,7 +85,7 @@
                                             '{{ resumen_diario.centro }}',
                                             '{{ resumen_diario.centro_nombre }}', 
                                             '{{ resumen_diario.foto_original }}',
-                                            '{{ resumen_diario.path_foto_yolo }}' )">
+                                            '{{ resumen_diario.foto_yolov5 }}' )">
                         <td>{{ resumen_diario.fecha_formato }}</td>
                         <td>{{ resumen_diario.centro_nombre }}</td>
                         <td>{{ resumen_diario.device_id }}</td>
