--- a/static/styles.css
+++ b/static/styles.css
@@ -7,7 +7,7 @@
 .item {
     order: 1;
     margin-bottom: 25px;
-    flex-grow: 1;
+    /* flex-grow: 1; */
 }
 
 .container_dashboard_body {
@@ -22,23 +22,29 @@
     margin-bottom: 25px;
     /*min-width: 750px;*/
     /*min-height: 600px;*/
-    flex-grow: 3;
+    flex-grow: 1;
 }
 
 .item_dashboard_mapa {
-    order: 1;
+    order: 2;
     margin-bottom: 25px;
     /*min-width: 550px;*/
     /*min-height: 700px;*/
-    flex-grow: 2;
+    /* flex-grow: 2; */
+}
+
+.item_dashboard_tabla_detail{
+    order: 3;
+    margin-bottom: 25px;
+    flex-grow: 1;
 }
 
 .item_imagen_yolo {
-    order: 1;
+    order: 4;
     margin-bottom: 25px;
     /*min-width: 750px;*/
     min-height: 600px;
-    flex-grow: 3;
+    /* flex-grow: 3; */
 }
 
 .container_imagen {
@@ -77,7 +83,7 @@
     margin-bottom: 25px;
     /*min-width: 750px;*/
     min-height: 600px;
-    flex-grow: 3;
+    /* flex-grow: 3; */
 }
 
 .item_dashboard_imagen_container {
