--- a/templates/index.html
+++ b/templates/index.html
@@ -47,9 +47,9 @@
   </div>
   <div class="container_mapa-dashboard pt-4 mapa-dashboard" style="display:'none'">
     <div class="container_dashboard_body">
-      <div class="item_dashboard_tabla">
-        <iframe id="detalle-casos" class="detalle-casos" 
-          src="/detalle-casos" width="100%"
+      <div class="item_dashboard_tabla" >
+        <iframe id="detalle-casos" 
+          src="/detalle-casos" width="100%" height="100%"
           frameborder="0" scrolling="no" onload="resizeIframe(this)"></iframe>
       </div>
       
@@ -81,8 +81,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     function resizeIframe(obj) {
-      //obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
-      obj.style.height = '1000px';
+      obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
     }
   </script>
   <!-- Toastify js -->
