--- a/static/styles.css
+++ b/static/styles.css
@@ -7,7 +7,6 @@
 .item {
     order: 1;
     margin-bottom: 25px;
-    /* flex-grow: 1; */
 }
 
 .container_dashboard_body {
@@ -20,31 +19,21 @@
 .item_dashboard_tabla {
     order: 1;
     margin-bottom: 25px;
-    /*min-width: 750px;*/
-    /*min-height: 600px;*/
     flex-grow: 1;
 }
 
 .item_dashboard_mapa {
     order: 2;
     margin-bottom: 25px;
-    /*min-width: 550px;*/
-    /*min-height: 700px;*/
-    /* flex-grow: 2; */
 }
 
 .item_dashboard_tabla_detail{
-    order: 3;
-    margin-bottom: 25px;
-    flex-grow: 1;
+    order: 1;
 }
 
 .item_imagen_yolo {
-    order: 4;
-    margin-bottom: 25px;
-    /*min-width: 750px;*/
+    order: 2;
     min-height: 600px;
-    /* flex-grow: 3; */
 }
 
 .container_imagen {
@@ -60,14 +49,17 @@
 }
 
 .container_dashboard_item {
-    flex: 1 0 45%; /* explanation below */
+    flex: min-content;
+    margin: 0.1em;
+}
+
+.container_dashboard_det_item {
+    flex: min-content;
     margin: 0.1em;
 }
 
 .dashboard_mapa {
-    /*min-width: 550px;*/
     min-height: 500px;
-    /*min-height: 50%;*/
     overflow: hidden;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
@@ -81,9 +73,7 @@
 .item_dashboard_imagen {
     order: 2;
     margin-bottom: 25px;
-    /*min-width: 750px;*/
     min-height: 600px;
-    /* flex-grow: 3; */
 }
 
 .item_dashboard_imagen_container {
