--- a/static/styles.css
+++ b/static/styles.css
@@ -41,6 +41,7 @@
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+    min-width: 40vw; /* Ancho de la imagen */
 }
 
 #imagen_yolov5 {
@@ -61,6 +62,7 @@
 
 .dashboard_mapa {
     min-height: 500px;
+    min-width: 40vw; /* Ancho del mapa */
     overflow: hidden;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
